Fix the missing colour for sign in icon and class update on the icon

--- a/public/scss/components/_vsf-transaction.scss
+++ b/public/scss/components/_vsf-transaction.scss
@@ -1,7 +1,7 @@
 .icon.vsf-type-filtering {
   fill: $topbar-inner-link-color;
   line-height: 1rem;
-  &--active{
+  &--active, &:hover{
     fill: white;
   }
 }
